# IndoorTrackingDrones

./: CMakeLists.txt
3D printing files/: PS-eye_lens-mount_M12.stl  README.md
include/: CameraSystem.h  Mat.h  MocapManager.h  Scene.h  Shader.h  TrackerDetection.h  UserViewport.h  Vector.h  Window.h  ps3eye.h
lib/: libusb-1.0.lib
shaders/: project.v
src/: CameraSystem.cpp  Mat.cpp  MocapManager.cpp  Scene.cpp  TrackerDetection.cpp  UserViewport.cpp  Window.cpp  main.cpp  ps3eye.cpp
